# genfib

./: AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
common/: Makefile.am  Makefile.in  digmathcommon.h  print.c  settings.c
lib/: README
rendering/: Makefile.am  Makefile.in  digmathrender.h  libpngwrapper.c  render.c
src/: Makefile.am  Makefile.in  intersect.c  iterate.c  main.c  mathoperations.h  statistics.c
