###
# This Makefile is a part of the genfib set intersection application.
# For full copyright and license information, please view the LICENSE file
# which should be distributed with this source code.
#
# @license MIT License
# @copyright Copyright (c) 2013, Steven Velozo
###

SUBDIRS = common rendering src
